Corrected a structural issue in the CFME on OSP guide.
Conflicts:
	doc-Managing_Providers/cfme/master.adoc

--- a/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
@@ -154,12 +154,16 @@ include::topics/reports.adoc[]
 
 include::topics/chargeback.adoc[]
 
-/// [appendix]
+[appendix]
+include::common/app-self_signed_CA.adoc[]
+
+[appendix]
 [[provisioning-dialogs-customizing]]
 == Customizing Provisioning Dialogs
 
 include::common/provisioning-dialogs-customization.adoc[]
 
+[appendix]
 [[custom-button-tenants]]
 == Creating Custom Buttons for Cloud Tenants
 
