--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -329,6 +329,9 @@ include::VNC_and_SPICE_consoles.adoc[]
 :leveloffset: 2
 include::Snapshots.adoc[]
 
+:leveloffset: 2
+include::create-template-based-on-vm.adoc[]
+
 
 
 
