--- a/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
@@ -1,7 +1,7 @@
 [[create_template_based_on_vm]]
 = Creating a Template Based on a Virtual Machine
 
-Create a template from an existing virtual machine to use as a blueprint for creating additional virtual machines. The template creation dialog captures information on the request, catalog
+A template is a copy of a virtual machine that you can use to simplify the subsequent, repeated creation of similar virtual machines. Templates capture the configuration of software, configuration of hardware, and the software installed on the virtual machine on which the template is based. 
 
 Create a template based on an existing virtual machine:
 
@@ -14,8 +14,8 @@ Create a template based on an existing virtual machine:
 .. Provide a *First* and *Last* name in the individual fields.
 .. Enter a *Manager* name. 
 . Under the *Catalog* tab:
-.. Select a *Name*.
-.. Check *Seal Template*.
+.. Select the source virtual machine from the *Name* field.
+.. (Optional) Check *Seal Template*.
 +
 [NOTE]
 ====
@@ -25,6 +25,9 @@ Sealing, which uses the `virt-sysprep` command, removes system-specific details 
 .. Choose the number of VMs to include, from the drop-down menu.
 .. Provide a *VM Name* and *Description*.
 . Under the *Environment* tab, specify information for the storage domain in which to create the template's disks.
-..
+.. Check *Choose Automatically* to allow {product-title_short} to select where the template is stored. 
 .. Select the cluster with which to associate the template from the Cluster drop-down list. By default, this is the same as that of the source virtual machine.
 .. Choose a *Datastore* to associate with the template. (not sure how this works. Is it a datastore to associate or include???)
+. The *Schedule* tab allows users to input information on provisioning and retirement of the VM. 
+.. Select *Schedule* or *Immediately on Approval* for *Schedule Info* to determine when to provision the VM.
+.. Set the * Time to Retirement* under *Lifespan* by selection from options in the drop-down menu. 
