update with sme comments

--- a/common/create-generic-object.adoc
+++ b/common/create-generic-object.adoc
@@ -1,5 +1,5 @@
 
-Model a new resource by creating a generic object and add it to your {product-title} inventory. Each generic object can have attributes, associations, and methods. Once created, Once created, generic objects are visible to users of the service UI at the resource level.  
+Model a new resource by creating a generic object class and add it to your {product-title} inventory. Each generic object class can have attributes, associations, and methods. Once created through Automate, generic objects are visible to users of the service UI at the resource level.  
 
 Create a generic object using the following steps:
 
