--- a/common/edit-generic-object.adoc
+++ b/common/edit-generic-object.adoc
@@ -1,6 +1,6 @@
 
 
-Edit existing generic objects using the following steps:
+Edit existing generic objects classes using the following steps:
 
 . Navigate to menu:Automation[Automate > Generic Objects].
 . Click on a generic object in the list view. 
