--- a/common/create-generic-object.adoc
+++ b/common/create-generic-object.adoc
@@ -1,7 +1,7 @@
 
 Model a new resource by creating a generic object class and adding it to your {product-title} inventory. Each generic object class can have attributes, associations, and methods. Once created, generic objects classes are visible to users of the service UI at the resource level.  
 
-Create a generic object using the following steps:
+Create a generic object class using the following steps:
 
 . Navigate to menu:Automation[Automate > Generic Objects].
 . Click image:1847.png[Configuration] (*Configuration*), then click image:1862.png[Add a New Generic Object Class] (*Add a New Generic Object Class*).
