--- a/common/edit-generic-object.adoc
+++ b/common/edit-generic-object.adoc
@@ -3,7 +3,7 @@
 Edit existing generic objects classes using the following steps:
 
 . Navigate to menu:Automation[Automate > Generic Objects].
-. Click on a generic object in the list view. 
+. Click on a generic object class in the list view. 
 . Click image:1847.png[Configuration] (*Configuration*), then click image:1851.png[Edit this Generic Object Class] (*Edit this Generic Object Class*).
-. Make required changes to the generic object fields. 
+. Make required changes to the generic object class fields. 
 . Click *Save*.
