--- a/common/configuration-advanced.adoc
+++ b/common/configuration-advanced.adoc
@@ -1,30 +1,206 @@
 After logging in, you can use the following menu items for advanced configuration of the appliance:
 
-* Use *Set DHCP Network Configuration* to use DHCP to obtain the IP address and network configuration for your {product-title} appliance. The appliance is initially configured as a DHCP client with bridged networking.
-* Use *Set Static Network Configuration* if you have a specific IP address and network settings you need to use for the {product-title} appliance.
-* Use *Test Network Configuration* to check that name resolution is working correctly.
-* Use *Set Hostname* to specify a hostname for the {product-title} appliance.
-+
-[IMPORTANT]
-====
-A valid fully qualified hostname for the {product-title} appliance is required for SmartState analysis to work correctly,
-====
-+
-* Use *Set Timezone* to configure the time zone for the {product-title} appliance.
-* Use *Set Date and Time* to configure the date and time for the {product-title} appliance.
-* Use *Restore Database from Backup* to restore the Virtual Management Database (VMDB) from a previous backup.
-* Use *Setup Database Region* to create regions for VMDB replication.
-* Use *Configure Database* to configure the VMDB. Use this option to configure the database for the appliance after installing and running it for the first time.
-* Use *Configure Database Replication* to configure a primary or standby server for VMDB replication.
-* Use *Configure Database Maintenance* to configure the VMDB maintenance schedule.
-* Use *Configure Application Database Failover Monitor* to start or stop VMDB failover monitoring.
-* Use *Extend Temporary Storage* to add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at `/var/www/miq_tmp`. The appliance uses this temporary storage directory to perform certain image download functions.
-* Use *Configure External Authentication (httpd)* to configure authentication through an IPA server.
-* Use *Generate Custom Encryption Key* to regenerate the encryption key used to encode plain text password.
-* Use *Harden Appliance Using SCAP Configuration* to apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the `/var/www/miq/lib/appliance_console/config/scap_rules.yml` file.
-* Use *Stop EVM Server Processes* to stop all server processes. You may need to do this to perform maintenance.
-* Use *Start EVM Server Processes* to start the server. You may need to do this after performing maintenance.
-* Use *Restart Appliance* to restart the {product-title} appliance. You can either restart the appliance and clear the logs or just restart the appliance.
-* Use *Shut Down Appliance* to power down the appliance and exit all processes.
-* Use *Summary Information* to go back to the network summary screen for the {product-title} appliance.
-* Use *Quit* to leave the {product-title} appliance console.
+.Appliance Console Menu Items
+[cols="1,1", frame="all"]
+|===
+|
+
+							Option
+              
+|
+							
+              Description
+              
+|
+							
+              *Set DHCP Network Configuration*
+              
+|
+						  
+              Obtain the IP address and network configuration for your {product-title} appliance using DHCP. The appliance is initially configured as a DHCP client with bridged networking.
+|
+	
+              *Set Static Network Configuration*
+  
+|
+  
+              Configure a static network configuration if you have a specific IP address and network settings you need to use for the {product-title} appliance.
+
+|
+	
+              *Test Network Configuration*
+  
+|
+  
+              Check that name resolution is working correctly.  
+              
+|
+	
+              *Set Hostname*
+  
+a|
+  
+              Specify a hostname for the {product-title} appliance.  
+              
+IMPORTANT: A valid fully qualified hostname for the {product-title} appliance is required for SmartState analysis to work correctly.
+              
+|
+	
+              *Set Timezone*
+  
+|
+  
+              Configure the time zone for the {product-title} appliance.            
+              
+              
+|
+	
+              *Set Date and Time*
+  
+|
+  
+              Configure the date and time for the {product-title} appliance.     
+              
+              
+|
+	
+              *Restore Database from Backup*
+  
+|
+  
+              Restore the Virtual Management Database (VMDB) from a previous backup.  
+|
+	
+              *Setup Database Region*
+  
+|
+  
+              Create regions for VMDB replication. 
+              
+|
+	
+              *Configure Database*
+  
+|
+  
+              Configure the VMDB. Use this option to configure the database for the appliance after installing and running it for the first time.
+              
+|
+	
+              *Configure Database Replication*
+  
+|
+  
+              Configure a primary or standby server for VMDB replication.
+              
+|
+	
+              *Configure Database Maintenance*
+  
+|
+  
+              Configure the VMDB maintenance schedule.
+              
+|
+
+              *Configure Application Database Failover Monitor*
+
+|
+
+              Start or stop VMDB failover monitoring.    
+              
+|
+
+              *Extend Temporary Storage*
+
+|
+
+              Add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at `/var/www/miq_tmp`. The appliance uses this temporary storage directory to perform certain image download functions.  
+                                                        
+|
+
+              *Configure External Authentication (httpd)*
+
+|
+
+              Configure authentication through an IPA server.                                      
+                                                       
+|
+
+              *Generate Custom Encryption Key*
+
+|
+
+              Regenerate the encryption key used to encode plain text password.                                      
+                        
+|
+
+              *Harden Appliance Using SCAP Configuration*
+
+|
+
+              Apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the `/var/www/miq/lib/appliance_console/config/scap_rules.yml` file.                                    
+                          
+                          
+|
+
+              *Stop EVM Server Processes*
+
+|
+
+              Stop all server processes. You may need to do this to perform maintenance.                
+              
+              
+|
+
+              *Start EVM Server Processes*
+
+|
+
+              Start the server. You may need to do this after performing maintenance.
+            
+|
+
+              *Restart Appliance*
+
+|
+
+              Restart the {product-title} appliance. You can either restart the appliance and clear the logs or just restart the appliance.                                                                                   
+                                    
+|
+
+            *Shut Down Appliance*
+
+|
+
+            Power down the appliance and exit all processes.          
+            
+            
+|
+
+            *Summary Information*
+
+|
+
+            Go back to the network summary screen for the {product-title} appliance.      
+            
+|
+
+            *Quit*
+
+|
+
+            Leave the {product-title} appliance console.            
+                       
+                                                  
+              
+              
+              
+                
+|
+|===
+            
+
+
+      
+
