added all new options on appliance console menu. A few description fields need editing

--- a/common/configuration-advanced.adoc
+++ b/common/configuration-advanced.adoc
@@ -1,6 +1,6 @@
 After logging in, you can use the following menu items for advanced configuration of the appliance:
 
-.Appliance Console Menu Items
+.Appliance Console Advanced Settings
 [cols="1,1", frame="all"]
 |===
 |
@@ -13,36 +13,17 @@ After logging in, you can use the following menu items for advanced configuratio
               
 |
 							
-              *Set DHCP Network Configuration*
+              *Configure Network*
               
-|
-						  
-              Obtain the IP address and network configuration for your {product-title} appliance using DHCP. The appliance is initially configured as a DHCP client with bridged networking.
-|
-	
-              *Set Static Network Configuration*
-  
-|
-  
-              Configure a static network configuration if you have a specific IP address and network settings you need to use for the {product-title} appliance.
-
-|
-	
-              *Test Network Configuration*
-  
-|
-  
-              Check that name resolution is working correctly.  
-              
-|
-	
-              *Set Hostname*
-  
 a|
-  
-              Specify a hostname for the {product-title} appliance.  
-              
-IMPORTANT: A valid fully qualified hostname for the {product-title} appliance is required for SmartState analysis to work correctly.
+						  
+Provides options for configuring the network for your {product-title_short} appliance. The appliance is initially configured as a DHCP client with bridged networking. 
+
+You can use DHCP to obtain the IP address and network configuration for your {product-title_short} appliance, or use an IPv4 or IPv6 static network configuration by providing specific IP address and network settings.
+
+This menu also provides options to test the network configuration to check that name resolution is working correctly, and to set the appliance's hostname.
+
+IMPORTANT: A valid fully qualified hostname for the {product-title_short} appliance is required for SmartState analysis to work correctly.
               
 |
 	
@@ -69,14 +50,7 @@ IMPORTANT: A valid fully qualified hostname for the {product-title} appliance is
 |
   
               Restore the Virtual Management Database (VMDB) from a previous backup.  
-|
-	
-              *Setup Database Region*
-  
-|
-  
-              Create regions for VMDB replication. 
-              
+
 |
 	
               *Configure Database*
@@ -100,6 +74,13 @@ IMPORTANT: A valid fully qualified hostname for the {product-title} appliance is
 |
   
               Configure the VMDB maintenance schedule.
+|
+	
+              *Logfile Configuration*
+  
+|
+  
+              (EDIT) Configure the logfile. Configure a new logfile disk volume?
               
 |
 
@@ -123,7 +104,15 @@ IMPORTANT: A valid fully qualified hostname for the {product-title} appliance is
 
 |
 
-              Configure authentication through an IPA server.                                      
+              Configure authentication through an IPA server.   
+              
+|
+
+            *Update External Authentication Options*
+
+|
+
+           (EDIT)   Update external authentication options.        
                                                        
 |
 
