added new screenshot for multiple groups feature

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2058,7 +2058,7 @@ To create a user:
 . Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new User*) to create a user.
 . Enter a *Full Name*, *Username*, *Password* with confirmation, and *Email Address* for the user. 
 +
-image:2086.png[]
+image:available_groups.png[]
 +
 [IMPORTANT]
 ====
