add line to describe option to enter manual cluster and datastore info

--- a/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
@@ -37,6 +37,9 @@ Sealing, which uses the `virt-sysprep` command, removes system-specific details 
 .. Provide a *Name* and *Description* for the created template. 
 . Under the *Environment* tab, specify information for the storage domain in which to create the template's disks.
 .. Check *Choose Automatically* to allow {product-title_short} to determine the destination cluster and datastore.  
++
+Or, manually enter cluster and datastore information using the following steps:
++
 .. Select the cluster with which to associate the template from the *Cluster* drop-down list. By default, this is identical to the cluster of the source VM.
 .. Choose a *Datastore* for the destination to create the template's disks. 
 . Provide provisioning and retirement information for VMs based on the template in the *Schedule* tab
