--- a/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
@@ -24,6 +24,7 @@ Create a template based on an existing virtual machine:
 .. Enter an *E-Mail* address.
 .. Provide a *First* and *Last* name in the individual fields.
 .. Enter a *Manager* name. 
+. Assign tags to the new template in the *Purpose* tab. 
 . Use fields in the *Catalog* tab to identify the source VM and provide details for the template:
 .. Select the source VM from the *Name* field.
 .. (Optional) Check *Seal Template*.
