--- a/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
@@ -9,8 +9,8 @@ Virtual machines must meet the following criteria to publish as templates:
 
 * The VM must not be blank, archived or orphaned. 
 * The VM must be associated with a Red Hat Virtualization Provider.
-* The Red Hat Virtualization provider must support `publish VM`. (Available in ovirt-engine-4.0 and higher, with the option of `use_ovirt_engine_sdk` set to true in the settings.yml)
-* The VM power state is `OFF`.
+* The Red Hat Virtualization provider must support `publish vm`. (Available in ovirt-engine-4.0 and higher, with the option of `use_ovirt_engine_sdk` set to true in the settings.yml)
+* The VM power state is `off`.
 * Sealing a template is not supported for Windows OS VMs. 
 ====
 
@@ -25,6 +25,7 @@ Create a template based on an existing virtual machine:
 .. Provide a *First* and *Last* name in the individual fields.
 .. Enter a *Manager* name. 
 . Assign tags to the new template in the *Purpose* tab. 
+.. Click on a tag category and check 
 . Use fields in the *Catalog* tab to identify the source VM and provide details for the template:
 .. Select the source VM from the *Name* field.
 .. (Optional) Check *Seal Template*.
@@ -46,3 +47,4 @@ Or, manually enter cluster and datastore information using the following steps:
 . Provide provisioning and retirement information for VMs based on the template in the *Schedule* tab
 .. Select *Schedule* or *Immediately on Approval* for *Schedule Info* to determine when to provision the VM.
 .. Set the *Time to Retirement* under *Lifespan* using the drop-down menu. 
+. Click *Submit*. 
