--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -47,8 +47,181 @@ To upload the {product-title} appliance file to Microsoft Azure, ensure the foll
 
 [IMPORTANT]
 ====
-Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure Powershell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image file (`cfme-azure-5.8.2.0-1.x86_64.vhd` and newer) is available for download in a fixed format, and can be uploaded to an Azure environment and provisioned without requiring any additional manipulations with the image.   
+Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure Powershell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image files (`cfme-azure-5.8.2.0-1.x86_64.vhd` and newer) are available for download in a fixed format, and can be uploaded to an Azure environment and provisioned without requiring any additional manipulations with the image.   
 ====
+
+[[install-azure-cli]]
+==== Install the Azure Command-Line Interface
+
+[NOTE]
+====
+For a complete Azure CLI 2.0 command reference, see link:https://docs.microsoft.com/en-us/cli/azure/?view=azure-cli-latest[Azure CLI 2.0: Command reference - az].
+====
+
+. Import the Microsoft repository key. 
++
+----
+$ sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
+----
++
+. Create a local Azure CLI repository entry.
++
+----
+$ sudo sh -c 'echo -e "[azure-cli]\nname=Azure CLI\nbaseurl=https://packages.microsoft.com/yumrepos/azure-cli\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/azure-cli.repo'
+----
++
+. Update the yum package index.
++
+----
+$ yum check-update
+----
++
+. Install the Azure CLI.
++
+----
+$ sudo yum install azure-cli
+----
++
+. Log in to Azure.
++
+----
+$ az login
+
+Example:
+
+To sign in, use a web browser to open the page https://aka.ms/devicelogin and enter the code GJP8Y33XY to authenticate.
+
+[
+  {
+    "cloudName": "AzureCloud",
+    "id": "528c646b-83jb-4527-1a04-10d294fd0cc2",
+    "isDefault": true,
+    "name": "Demo Azure account",
+    "state": "Enabled",
+    "tenantId": "7e7cfe6b-cff0-e4d8-a446-57a76c9b4958",
+    "user": {
+      "name": "clouduser",
+      "type": "user"
+    }
+  }
+]
+----
++
+
+
+[[uploading-the-appliance-using-azure-powershell-script]]
+==== Uploading the {product-title_short} Virtual Appliance Using Azure Powershell Script
+
+[NOTE]
+====
+Make sure Azure Resource Manager cmdlets are available; see link:https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets] for the latest installation information.
+====
+
+. Log in to *Azure Resource Manager* using the cmdlet:
++
+------
+## Customize for Your Environment
+$SubscriptionName = "my subscription"
+
+Login-AzureRmAccount
+Select-AzureRmSubscription -SubscriptionName $SubscriptionName
+------
++  
+When prompted, enter your user name and password for the Azure Portal.
+
+. Upload the .vhd file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or Powershell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
++
+------
+Example Script:
+
+## Customize for Your Environment
+$SubscriptionName = "my subscription"
+
+$ResourceGroupName = "test"
+$StorageAccountName = "test"
+
+$BlobNameSource = "cfme-test.vhd"
+$BlobSourceContainer = "templates"
+$LocalImagePath = "C:\tmp\$BlobNameSource"
+
+##
+
+# Upload VHD to a "templates" directory. You can pass a few arguments, such as `NumberOfUploaderThreads 8`. The default number of uploader threads is `8`. See https://msdn.microsoft.com/en-us/library/mt603554.aspx
+
+Add-AzureRmVhd -ResourceGroupName $ResourceGroupName -Destination https://$StorageAccountName.blob.core.windows.net/$BlobSourceContainer/$BlobNameSource -LocalFilePath $LocalImagePath -NumberOfUploaderThreads 8
+------
++
+. Create a virtual machine. Then, define your VM and VHD name, your system/deployment name and size. Next, you will set the appropriate Storage, Network and Configuration options for your environment.
++
+------
+Example Script:
+
+## Customize for Your Environment
+
+$BlobNameDest = "cfme-test.vhd"
+$BlobDestinationContainer = "vhds"
+$VMName = "cfme-test"
+$DeploySize= "Standard_A3"
+$vmUserName = "user1"
+
+$InterfaceName = "test-nic"
+$VNetName = "test-vnet"
+$PublicIPName = "test-public-ip"
+
+$SSHKey = <your ssh public key>
+
+##
+
+$StorageAccount = Get-AzureRmStorageAccount -ResourceGroup $ResourceGroupName -Name $StorageAccountName
+
+$SourceImageUri = "https://$StorageAccountName.blob.core.windows.net/templates/$BlobNameSource"
+$Location = $StorageAccount.Location
+$OSDiskName = $VMName
+
+# Network
+$Subnet1Name = "default"
+$VNetAddressPrefix = "10.1.0.0/16"
+$VNetSubnetAddressPrefix = "10.1.0.0/24"
+$PIp = New-AzureRmPublicIpAddress -Name $PublicIPName -ResourceGroupName $ResourceGroupName -Location $Location -AllocationMethod Dynamic -Force
+$SubnetConfig = New-AzureRmVirtualNetworkSubnetConfig -Name $Subnet1Name -AddressPrefix $VNetSubnetAddressPrefix
+$VNet = New-AzureRmVirtualNetwork -Name $VNetName -ResourceGroupName $ResourceGroupName -Location $Location -AddressPrefix $VNetAddressPrefix -Subnet $SubnetConfig -Force
+$Interface = New-AzureRmNetworkInterface -Name $InterfaceName -ResourceGroupName $ResourceGroupName -Location $Location -SubnetId $VNet.Subnets[0].Id -PublicIpAddressId $PIp.Id -Force
+
+# Specify the VM Name and Size
+$VirtualMachine = New-AzureRmVMConfig -VMName $VMName -VMSize $DeploySize
+
+# Add User
+$cred = Get-Credential -UserName $VMUserName -Message "Setting user credential - use blank password"
+$VirtualMachine = Set-AzureRmVMOperatingSystem -VM $VirtualMachine -Linux -ComputerName $VMName -Credential $cred
+
+# Add NIC
+$VirtualMachine = Add-AzureRmVMNetworkInterface -VM $VirtualMachine -Id $Interface.Id
+
+# Add Disk
+$OSDiskUri = $StorageAccount.PrimaryEndpoints.Blob.ToString() + $BlobDestinationContainer + "/" + $BlobNameDest
+
+$VirtualMachine = Set-AzureRmVMOSDisk -VM $VirtualMachine -Name $OSDiskName -VhdUri $OSDiskUri -CreateOption fromImage -SourceImageUri $SourceImageUri -Linux
+
+# Set SSH key
+Add-AzureRmVMSshPublicKey -VM $VirtualMachine -Path “/home/$VMUserName/.ssh/authorized_keys” -KeyData $SSHKey
+
+# Create the VM
+New-AzureRmVM -ResourceGroupName $ResourceGroupName -Location $Location -VM $VirtualMachine
+------
++
+
+
+[NOTE]
+====
+These are the procedural steps as of the time of writing. For more information, see the following Azure documentation. 
+
+* https://azure.microsoft.com/en-us/documentation/articles/powershell-azure-resource-manager
+
+The steps covered in the following article are for a Windows machine, however, most of the items are common between Windows and Linux.
+
+* https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-windows-create-powershell
+====
+
 
 [[create-resources-for-appliance-in-azure]]
 ==== Create Resources for the Appliance in Microsoft Azure
@@ -205,162 +378,10 @@ Example:
 +
 
 
-
-
-[[uploading-the-appliance-using-azure-powershell-script]]
-==== Uploading the {product-title_short} Virtual Appliance Using Azure Powershell Script
-
-[NOTE]
-====
-Make sure Azure Resource Manager cmdlets are available; see link:https://msdn.microsoft.com/en-us/library/mt125356.aspx[Azure Resource Manager Cmdlets] for the latest installation information.
-====
-
-. Log in to *Azure Resource Manager* using the cmdlet:
-+
-------
-## Customize for Your Environment
-$SubscriptionName = "my subscription"
-
-Login-AzureRmAccount
-Select-AzureRmSubscription -SubscriptionName $SubscriptionName
-------
-+  
-When prompted, enter your user name and password for the Azure Portal.
-
-. Upload the .vhd file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or Powershell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
-+
-------
-Example Script:
-
-## Customize for Your Environment
-$SubscriptionName = "my subscription"
-
-$ResourceGroupName = "test"
-$StorageAccountName = "test"
-
-$BlobNameSource = "cfme-test.vhd"
-$BlobSourceContainer = "templates"
-$LocalImagePath = "C:\tmp\$BlobNameSource"
-
-##
-
-# Upload VHD to a "templates" directory. You can pass a few arguments, such as `NumberOfUploaderThreads 8`. The default number of uploader threads is `8`. See https://msdn.microsoft.com/en-us/library/mt603554.aspx
-
-Add-AzureRmVhd -ResourceGroupName $ResourceGroupName -Destination https://$StorageAccountName.blob.core.windows.net/$BlobSourceContainer/$BlobNameSource -LocalFilePath $LocalImagePath -NumberOfUploaderThreads 8
-------
-+
-. Create a virtual machine. Then, define your VM and VHD name, your system/deployment name and size. Next, you will set the appropriate Storage, Network and Configuration options for your environment.
-+
-------
-Example Script:
-
-## Customize for Your Environment
-
-$BlobNameDest = "cfme-test.vhd"
-$BlobDestinationContainer = "vhds"
-$VMName = "cfme-test"
-$DeploySize= "Standard_A3"
-$vmUserName = "user1"
-
-$InterfaceName = "test-nic"
-$VNetName = "test-vnet"
-$PublicIPName = "test-public-ip"
-
-$SSHKey = <your ssh public key>
-
-##
-
-$StorageAccount = Get-AzureRmStorageAccount -ResourceGroup $ResourceGroupName -Name $StorageAccountName
-
-$SourceImageUri = "https://$StorageAccountName.blob.core.windows.net/templates/$BlobNameSource"
-$Location = $StorageAccount.Location
-$OSDiskName = $VMName
-
-# Network
-$Subnet1Name = "default"
-$VNetAddressPrefix = "10.1.0.0/16"
-$VNetSubnetAddressPrefix = "10.1.0.0/24"
-$PIp = New-AzureRmPublicIpAddress -Name $PublicIPName -ResourceGroupName $ResourceGroupName -Location $Location -AllocationMethod Dynamic -Force
-$SubnetConfig = New-AzureRmVirtualNetworkSubnetConfig -Name $Subnet1Name -AddressPrefix $VNetSubnetAddressPrefix
-$VNet = New-AzureRmVirtualNetwork -Name $VNetName -ResourceGroupName $ResourceGroupName -Location $Location -AddressPrefix $VNetAddressPrefix -Subnet $SubnetConfig -Force
-$Interface = New-AzureRmNetworkInterface -Name $InterfaceName -ResourceGroupName $ResourceGroupName -Location $Location -SubnetId $VNet.Subnets[0].Id -PublicIpAddressId $PIp.Id -Force
-
-# Specify the VM Name and Size
-$VirtualMachine = New-AzureRmVMConfig -VMName $VMName -VMSize $DeploySize
-
-# Add User
-$cred = Get-Credential -UserName $VMUserName -Message "Setting user credential - use blank password"
-$VirtualMachine = Set-AzureRmVMOperatingSystem -VM $VirtualMachine -Linux -ComputerName $VMName -Credential $cred
-
-# Add NIC
-$VirtualMachine = Add-AzureRmVMNetworkInterface -VM $VirtualMachine -Id $Interface.Id
-
-# Add Disk
-$OSDiskUri = $StorageAccount.PrimaryEndpoints.Blob.ToString() + $BlobDestinationContainer + "/" + $BlobNameDest
-
-$VirtualMachine = Set-AzureRmVMOSDisk -VM $VirtualMachine -Name $OSDiskName -VhdUri $OSDiskUri -CreateOption fromImage -SourceImageUri $SourceImageUri -Linux
-
-# Set SSH key
-Add-AzureRmVMSshPublicKey -VM $VirtualMachine -Path “/home/$VMUserName/.ssh/authorized_keys” -KeyData $SSHKey
-
-# Create the VM
-New-AzureRmVM -ResourceGroupName $ResourceGroupName -Location $Location -VM $VirtualMachine
-------
-+
-
-
-[NOTE]
-====
-These are the procedural steps as of the time of writing. For more information, see the following Azure documentation. 
-
-* https://azure.microsoft.com/en-us/documentation/articles/powershell-azure-resource-manager
-
-The steps covered in the following article are for a Windows machine, however, most of the items are common between Windows and Linux.
-
-* https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-windows-create-powershell
-====
-
-
 [[uploading-the-appliance-using-azure-cli]]
 ==== Uploading and Provisioning the {product-title_short} Virtual Appliance Using Azure Command-Line Interface
 
 You can upload the appliance to an Azure environment using the Azure Command-Line Interface (Azure CLI) following the process below.
-
-
-.Install Azure CLI 2.0:
-
-Complete the steps below to install Azure CLI 2.0 using curl. See link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[] for other installation methods.
-
-. Make sure Python is updated and install the prerequisite packages.
-+
-----
-$ sudo yum update
-$ sudo yum install -y gcc libffi-devel python-devel openssl-devel
-----
-+
-. Install Azure CLI 2.0.
-+
-----
-$ curl -L https://aka.ms/InstallAzureCli | bash
-----
-+
-. Export Azure environment variables.
-+
-----
-$ export AZURE_STORAGE_ACCOUNT=<azure-storage-account-name>
-$ export AZURE_STORAGE_KEY="<azure-storage-account-key>"
-
-Example:
-
-$ export AZURE_STORAGE_ACCOUNT=xyzgroup9401
-$ export AZURE_STORAGE_KEY="zG7Dc29I7ysKik/Xiqk3tQN43CtLpObmJom+Hze6ko/ZiwXhdElknABzUbZ/zie5vW1XyTlGsgbaVf0fUijf2w=="
-----
-+
-
-
-
-
-.Upload and Provision the {product-title_short} Virtual Appliance Using Azure CLI:
 
 
 . Upload the image to the storage container. It may take several minutes. Note: Enter `az storage container list` to get the list of storage containers.
@@ -370,7 +391,7 @@ $ az storage blob upload --account-name <storage-account-name> --container-name 
 
 Example:
 
-$ az storage blob upload --account-name azrhelclistact --container-name azrhelclistcont --type page --file cfme-azure-5.9.0.17-1.x86_64.vhd --name cfme-azure-5.9.0.17-1.x86_64.vhd
+$ az storage blob upload --account-name azrhelclistact --container-name azrhelclistcont --type page --file cfme-azure-5.8.2.3-1.x86_64.vhd --name cfme-azure-5.8.2.3-1.x86_64.vhd
  
 Finished[#############################################################]  100.0000%
 ----
@@ -382,34 +403,17 @@ $ az storage blob url -c <container-name> -n <image-name>.vhd
 
 Example:
 
-$ az storage blob url -c azrhelclistcont -n cfme-azure-5.9.0.17-1.x86_64.vhd 
+$ az storage blob url -c azrhelclistcont -n cfme-azure-5.8.2.3-1.x86_64.vhd 
 
-"https://azrhelclistact.blob.core.windows.net/azrhelclistcont/cfme-azure-5.9.0.17-1.x86_64.vhd"
+"https://azrhelclistact.blob.core.windows.net/azrhelclistcont/cfme-azure-5.8.2.3-1.x86_64.vhd"
 ----
 +
-. Log in to Azure.
+. Create a reusable image from a blob and then use a managed disk.
 +
 ----
-$ az login
-
 Example:
 
-To sign in, use a web browser to open the page https://aka.ms/devicelogin and enter the code GJP8Y33XY to authenticate.
-
-[
-  {
-    "cloudName": "AzureCloud",
-    "id": "528c646b-83jb-4527-1a04-10d294fd0cc2",
-    "isDefault": true,
-    "name": "Demo Azure account",
-    "state": "Enabled",
-    "tenantId": "7e7cfe6b-cff0-e4d8-a446-57a76c9b4958",
-    "user": {
-      "name": "clouduser",
-      "type": "user"
-    }
-  }
-]
+$ az image create -n <image-name> -g <cfme-appliance-group> --os-type <linux> --source <https://cfmestorageaccount.blob.core.windows.net/cfmestoragecontainer/cfme-azure-5.8.2.3-1.x86_64.vhd>
 ----
 +
 . Create the virtual machine. Note that the following command uses `--generate-ssh-keys`. In this example, the private/public key pair `/home/clouduser/.ssh/id_rsa` and `/home/clouduser/.ssh/id_rsa.pub` are created.
@@ -419,7 +423,7 @@ $ az vm create --resource-group <resource-group> --location <azure-region> --use
 
 Example:
 
-az vm create --resource-group azrhelclirsgrp --location southcentralus --use-unmanaged-disk --name cfme-appliance-1 --storage-account azrhelclistact --os-type linux --admin-username clouduser --generate-ssh-keys --image https://azrhelclistact.blob.core.windows.net/azrhelclistcont/cfme-azure-5.9.0.17-1.x86_64.vhd
+az vm create --resource-group azrhelclirsgrp --location southcentralus --use-unmanaged-disk --name cfme-appliance-1 --storage-account azrhelclistact --os-type linux --admin-username clouduser --generate-ssh-keys --image https://azrhelclistact.blob.core.windows.net/azrhelclistcont/cfme-azure-5.8.2.3-1.x86_64.vhd
 
 {
   "fqdns": "",
@@ -486,6 +490,9 @@ $ export AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;Endpoin
 ====
 
 
-
+[IMPORTANT]
+====
+After uploading the {product-title} appliance, you must configure the database for {product-title}; see xref:configuring_a_database[Configuring a Database for {product-title}].
+====
 
 
