edited advanced configuration options table

--- a/common/configuration-advanced.adoc
+++ b/common/configuration-advanced.adoc
@@ -80,7 +80,7 @@ IMPORTANT: A valid fully qualified hostname for the {product-title_short} applia
   
 |
   
-              (EDIT) Configure the logfile. Configure a new logfile disk volume?
+              Configure the logfile and configure a new logfile disk volume.
               
 |
 
@@ -112,7 +112,7 @@ IMPORTANT: A valid fully qualified hostname for the {product-title_short} applia
 
 |
 
-           (EDIT)   Update external authentication options.        
+             Update external authentication options.        
                                                        
 |
 
