--- a/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
@@ -17,12 +17,13 @@ include::common/attributes/miq.adoc[]
 [[Installation]]
 include::topics/installation.adoc[]
 
+include::common/configuration.adoc[]
+
+// [[Additional_Configuration]]
+// include::topics/additional_configuration.adoc[]
+
 [[Initial_Login]]
 include::common/initial-login.adoc[]
-
-=== Changing the Default Login Password
-
-include::common/initial-login-changepw.adoc[]
 
 [[Troubleshooting]]
 include::topics/troubleshooting.adoc[]
