--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -17,14 +17,14 @@ include::common/attributes/cfme.adoc[]
 [[Installation]]
 include::topics/installation.adoc[]
 
+[[Configuration]]
+include::common/configuration.adoc[]
+
+// [[Additional_Configuration]]
+// include::topics/additional_configuration.adoc[]
+
 [[Initial_Login]]
-== Logging In After Installing {product-title}
-
 include::common/initial-login.adoc[]
-
-=== Changing the Default Login Password
-
-include::common/initial-login-changepw.adoc[]
 
 [[Troubleshooting]]
 include::topics/troubleshooting.adoc[]
