--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -495,7 +495,7 @@ $ export AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;Endpoin
 
 * You will need to create a data disk for the database; see link:https://docs.microsoft.com/en-us/azure/virtual-machines/linux/add-disk[] for information about how to add a persistent disk to store your data. 
 
-* See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#database-requirements[] for database requirements guidelines.
+* See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/deployment_planning_guide/#database-requirements[Database Requirements] for some general guidelines for your database requirements.
 
 * For information about Azure ports used by {product-title}, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/appliance_hardening_guide/#chap_red_hat_cloudforms_security_guide_firewall[].
 
