Updated the instructions on accessing the import image screen for RHV.

--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -68,10 +68,10 @@ To import the certificate authority, browse to `https://<engine_address>/ovirt-e
 
 To upload the appliance::
 
-. Open the *Upload Image* screen in the Administration Portal:
-* From the *Disks* tab, select *Start* from the *Upload* menu.
-* Alternatively, from the *Storage* tab select the storage domain, then select the *Disks* sub-tab, and select *Start* from the *Upload* menu.
-. In the *Upload Image* screen, click *Browse* and select the image on the local disk.
+. Log in to the Administration Portal.
+. Click the *Disks* tab.
+. Select *Start* from the *Upload* menu.
+. Click *Browse*, and select the image on the local disk.
 . Set *Image Type* to *QCOW2*.
 . Fill in the *Disk Option* fields. See https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1-beta/html-single/administration_guide/#Add_Virtual_Disk_dialogue_entries[Explanation of Settings in the New Virtual Disk Window] in the _Red Hat Virtualization Administration Guide_ for a description of the relevant fields.
 . Click *OK*.
