Updated links to OpenStack documentation.

--- a/common/openstack/cinder-backup-create.adoc
+++ b/common/openstack/cinder-backup-create.adoc
@@ -6,7 +6,7 @@
 +
 [NOTE]
 ====
-You can take an incremental backup of a volume if you have at least one existing full backup of the volume. An incremental volume saves resources by capturing only changes made to the volume since its last backup. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-create-volume-backup-incremental[Create an Incremental Volume Backup] in the _Red Hat OpenStack Platform Storage Guide_ for more information.
+You can take an incremental backup of a volume if you have at least one existing full backup of the volume. An incremental volume saves resources by capturing only changes made to the volume since its last backup. See https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/11/html/storage_guide/ch-cinder#section-create-volume-backup-incremental[Create an Incremental Volume Backup] in the _Storage Guide_ for more information.
 ====
 +
 . Click *Save*.
@@ -15,5 +15,5 @@ View a volume's backups by clicking *Cloud Volume Backups* on the volume's summa
 
 [NOTE]
 ====
-See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-volumes-advanced-backup[Back Up and Restore a Volume] in the _Red Hat OpenStack Platform Storage Guide_ for more information about backups.
+See https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/11/html/storage_guide/ch-cinder#section-volumes-advanced-backup[Back Up and Restore a Volume] in the _Storage Guide_ for more information about backups.
 ====
