--- a/common/provisioning-requests-keypairs.adoc
+++ b/common/provisioning-requests-keypairs.adoc
@@ -1,5 +1,5 @@
 
-Key pairs allow you to manage SSH access between a user and provisioned instance. For more information about key pairs in OpenStack, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/instances-and-images-guide/chapter-3-virtual-machine-instances#section-manage-keypair[Manage Key Pairs] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/instances-and-images-guide/instances-and-images-guide[Red Hat OpenStack Platform Instances and Images Guide].
+Key pairs allow you to manage SSH access between a user and provisioned instance. For more information about key pairs in OpenStack, see https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/11/html/instances_and_images_guide/ch-manage_instances#section-manage-keypair[Manage Key Pairs] in the _Instances and Images Guide_.
 
 To manage key pairs, navigate to menu:Compute[Clouds > Key Pairs]. From there, you can view a list of available key pairs. Click on a key pair to view its details.
 
