Conditionalized OSP versions.

--- a/common/openstack/cinder-snapshot-create.adoc
+++ b/common/openstack/cinder-snapshot-create.adoc
@@ -9,5 +9,6 @@ Click *Cloud Volume Snapshots* on the summary page of a volume to view the snaps
 
 [NOTE]
 ====
-See https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/11/html-single/storage_guide/#section-create-clone-delete-vol-snapshots[Create, Use, or Delete Volume Snapshots] in the _Storage Guide_ for more information about snapshots.
+See https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/{osp-ver}/html-single/storage_guide/#section-create-clone-delete-vol-snapshots[Create, Use, or Delete Volume Snapshots] in the _Storage Guide_ for more information about snapshots.
 ====
+
