--- a/doc-QuickStart_OpenStack_Provider_Guide/osp11/master.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/osp11/master.adoc
@@ -8,6 +8,7 @@ OpenStack Documentation Team <rhos-docs@redhat.com>
 
 :cfme:
 :openstack:
+:osp-ver: 11
 
 // Custom attributes
 include::common/attributes/cfme.adoc[]
