Corrected a reference to updating the appliance.

--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
@@ -56,10 +56,11 @@ ifdef::cfme[]
 
 include::common/configuration-register-appliance.adoc[]
 
-[[Updating_Appliances]]
-==== Updating Your Appliance
+[NOTE]
+====
+To update your appliances, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/migrating_to_red_hat_cloudforms_4.5/[Updating {product-title}] in _Migrating to {product-title} 4.5_.
+====
 
-include::common/configuration-update-appliance.adoc[]
 endif::cfme[]
 
 === Configuring {product-title_short} Metrics for SmartState Analysis
