--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -31,32 +31,32 @@ Through the use of catalogs, {product-title} provides support for multi-tier ser
 
 ////
 
-[[generic-objects]]
-==== Generic Objects
+[[dynamic-resource-objects]]
+==== Dynamic Resource Objects
 
-Generic objects are object-line entities, defined at runtime, that have unique names and user-defined attributes and relationships. Residing in the Automate Engine datastore, generic objects are designed to manage objects other than those related to private infrastructure, and public or private cloud providers. 
+Dynamic resource objects are object-like entities, defined at runtime, that have unique names and user-defined attributes and relationships. Residing in the Automate Engine datastore, dynamic resource objects are designed to manage objects other than those related to private infrastructure, and public or private cloud providers. 
 
-Using automate requests, services and catalog items, generic objects can be directly accessed or passed, during any step, as a parameter to a service state machine. As a result, generic objects can be used to quickly add the capability to provision and collect data on resources not supported by {product-title}.
+Using automate requests, services and catalog items, dynamic resource objects can be directly accessed or passed, during any step, as a parameter to a service state machine. As a result, dynamic resource objects can be used to quickly add the capability to provision and collect data on resources not supported by {product-title}.
 
-[[view-generic-objects]]
-===== View Generic Objects Classes
+[[view-dynamic-resource-objects]]
+===== View Dynamic Resource Objects Classes
 
-View a list of generic objects and click through to see detailed summary information for each object. 
+View a list of dynamic resource objects and click through to see detailed summary information for each object. 
 
-. Navigate to menu:Automate[Generic Objects].
-. Click on a generic item class in the table to view its summary information.
+. Navigate to menu:Automate[Dynamic Resource Objects].
+. Click on a dynamic resource object class in the table to view its summary information.
 
-[[create-generic-objects]]
-===== Create Generic Objects Classes
-include::common/create-generic-object.adoc[]
+[[create-dynamic-resource-objects]]
+===== Create Dynamic Resource Objects Classes
+include::common/create-dynamic-resource-object.adoc[]
 
-[[edit-generic-objects]]
-===== Edit Generic Objects Classes
-include::common/edit-generic-object.adoc[]
+[[edit-dynamic-resource-objects]]
+===== Edit Dynamic Resource Objects Classes
+include::common/edit-dynamic-resource-object.adoc[]
 
-[[remove-generic-objects]]
-===== Remove Generic Objects Classes
-include::common/remove-generic-object.adoc[]
+[[remove-dynamic-resource-objects]]
+===== Remove Dynamic Resource Objects Classes
+include::common/remove-dynamic-resource-object.adoc[]
 
 [[service-dialogs]]
 ==== Service Dialogs
