--- a/common/attributes/cfme.adoc
+++ b/common/attributes/cfme.adoc
@@ -4,4 +4,5 @@
 :product-title_short_l: cloudforms
 :product-title_abbr: cfme
 :product-title_abbr_uc: CFME
+:virt-product-title: Red Hat Virtualization
 
