--- a/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
@@ -9,7 +9,7 @@ Virtual machines must meet the following criteria to publish as templates:
 
 * The VM must not be blank, archived or orphaned. 
 * The VM must be associated with a {virt-product-title} provider.
-* {virt-product-title} provider 4.0 or higher, with `use_ovirt_engine_sdk` set to `true` in `/var/www/miq/vmdb/config/settings.yml`. 
+* {virt-product-title} provider 4.0 or higher, with `use_ovirt_engine_sdk` set to `true` in `/var/www/miq/vmdb/config/settings.yml`on your {product-title_short} appliance. 
 * The VM power state is `OFF`.
 * Sealing a template is not supported for Windows OS VMs. 
 ====
