Minor peer review edit

--- a/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/create-template-based-on-vm.adoc
@@ -42,7 +42,7 @@ Sealing, which uses the `virt-sysprep` command, removes system-specific details 
 +
 Or, manually enter cluster and datastore information using the following steps:
 +
-.. Select the cluster with which to associate the template from the *Cluster* drop-down list. By default, this is identical to the cluster of the source VM.
+.. Select the cluster with which to associate the template from the *Cluster* list. By default, this is identical to the cluster of the source VM.
 .. Choose a *Datastore* for the destination to create the template's disks. 
 . Provide provisioning and retirement information for VMs based on the template in the *Schedule* tab.
 .. Select *Schedule* or *Immediately on Approval* for *Schedule Info* to determine when to provision the VM.
