--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
@@ -1,119 +1,52 @@
 [[_to_create_an_alert]]
 === Creating an Alert
 
-In this section, the basics of creating an Alert are described.
-Detailed instructions for the specific types of Alerts are given in the sections following.
+This section outlines the basic procedure to create an alert.
 
-To send emails or SNMP traps from the {product-title} server, you must have the [literal]+Notifier+ server role enabled and have set up SMTP email or SNMP traps.
-For further information, see _General Configuration_.
+[NOTE]
+====
+To send emails or SNMP traps from the {product-title} server, you must enable the [literal]+Notifier+ server role and set up SMTP email or SNMP traps. For more information, see _General Configuration_.
+====
 
 . Navigate to menu:Control[Explorer].
-. Click the *Alerts* accordion, then click  image:1847.png[] (*Configuration*),  image:1862.png[] (*Add a new Alert*).
+. Click the *Alerts* accordion, then click image:1847.png[] (*Configuration*), image:1862.png[] (*Add a New Alert*).
+. Enter the basic details of the alert:
+.. Enter a description in the *Description* field.
+.. Select the *Active* check box to enable the alert after creation.
+.. Select the severity level from the *Severity* list.
+.. Select the inventory item on which to base the alert from the *Based On* list.
+.. Select the type of event that triggers the alert from the *What to Evaluate* list.
+.. Select the frequency with which to be notified if the event log threshold is reached from the *Notification Frequency* list.
+. Configure the parameters of the alert.
 +
-* Type in a description for the alert.
-* Check *Active* when you feel that the alert is ready to be enabled.
-* From *Based On*, select the type of infrastructure item to base the alert on.
-* The options shown in *What to Evaluate* change based on what you selected in *Based On*.
-* In *Notification Frequency*, select how often you want to be notified if the event log threshold is reached.
-
-. The parameters available are based on the *What to Evaluate* selection.
-  See the following sections for additional details on each alert type.
-. To send an email, check *Send an E-mail*.
-  Parameters required for sending an email are displayed.
+[NOTE]
+====
+The available parameters depend on the options you selected in the *Based On* and *What to Evaluate* lists. See later sections for the details of these parameters.
+====
 +
-
-image:1967.png[]
+. Optionally, select *Send an E-mail* to configure options so that an email is sent when the alert is triggered:
+.. Enter the email address from which to send the email in the *From* field.
+.. Select a user from the *Add a User* list to add a user registered in {product-title}. The user must have a valid email address entered under accounts.
+.. Enter the email address of a user in the *Add (enter manually)* field and click image:2261.png[] to add a user not registered in {product-title}.
+. Optionally, select *Send an SNMP Trap* to configure options so that an SNMP trap is sent when the alert is triggered:
+.. Enter the IP addresses of the hosts to send the trap in the *Host* fields.
+.. Select the version of SNMP to use from the *Version* list:
+... If you select *v1*, enter a trap number in the *Trap Number* field. Enter *1*, *2*, or *3*, based on the appropriate suffix number in xref:snmp-trap-identifiers[].
+... If you select *v2*, enter a trap object ID in the *Trap Object ID* field. Enter *info*, *warning*, or *critical* based on the values in xref:snmp-trap-identifiers[].
 +
-* In *From*, type in the sending email.
-* Use *Add a {product-title} User* to select a user.  The {product-title} user must have a valid email address entered under accounts.
-* Use *Add (enter manually)* to type in the address not registered to a {product-title} user.
-  Then, click  image:2261.png[] (*Add*).
-
-. If you check *Send an SNMP Trap*, type in the IP for the host to send the trap to, select the version of SNMP that you are using, and type in the Trap Object ID.
-  Type in multiple hosts if you need the trap sent to multiple SNMP hosts.
-+
-* If using SNMP V1, you will be prompted for a Trap Number.
-  Type 1, 2, or 3, based on the appropriate suffix number from table below.
-* If using SNMP V2, you will be prompted for a Trap Object ID.
-  Type info, warning, or critical, based on the table below.
-* Trap Object ID and suffix number
-+
+[[snmp-trap-identifiers]]
+.SNMP Trap Identifiers
 [cols="1,1,1", frame="all", options="header"]
 |===
-|
-
-											Object ID
-
-
-|
-
-											Suffix Number Added to PEN
-
-
-|
-
-											PEN with the Suffix Added
-
-
-
-|
-
-											info
-
-
-|
-
-											1
-
-
-|
-
-											1.3.6.1.4.1.33482.1
-
-
-
-|
-
-											warn, warning
-
-
-|
-
-											2
-
-
-|
-
-											1.3.6.1.4.1.33482.2
-
-
-
-|
-
-											crit, critical, error
-
-
-|
-
-											3
-
-
-|
-
-											1.3.6.1.4.1.33482.3
-
-
+|Object ID|Suffix Number Added to PEN|PEN with the Suffix Added
+|info|1|1.3.6.1.4.1.33482.1
+|warn, warning|2|1.3.6.1.4.1.33482.2
+|crit, critical, error|3|1.3.6.1.4.1.33482.3
 |===
 +
-
-image:1966.png[]
-
-
-. To show the alert as an event on the {product-title} timeline, check *Show on Timeline*.
-  It shows as part of the Alarm/Status Change/Errors category.
-. To invoke automation, check *Send a Management Event*.
-  Type in the name of the event.
-  This item exists in the *Process/Event Class*.
+. Optionally, select *Show on Timeline* to show the alert as an event on the {product-title} timeline. The alert shows as part of the *Alarm/Status Change/Errors* category.
+. Optionally, select *Send a Management Event* to trigger an automation event:
+.. Enter the name of the event that exists in the *Process/Event Class* in the *Event Name* field.
 . Click *Add*.
 
 
