Made minor edits to the section on the service dialog editor.

--- a/common/service-dialog-creation-using-dialog-editor.adoc
+++ b/common/service-dialog-creation-using-dialog-editor.adoc
@@ -1,6 +1,6 @@
-{product-title} adds a new drag-and-drop service dialog editor. The editor with its drag-and-drop feature provides a visual representation of the components that comprise a service dialog - which are dialog tabs, boxes, and elements, to help you easily use them to design your dialog.
+{product-title} adds a new drag-and-drop service dialog editor. The editor, with its drag-and-drop feature, provides a visual representation of the components that comprise a service dialog - dialog tabs, boxes, and elements - to help you easily use them to design your dialog.
 
-Using a service dialog, you can determine which options the users get to change. When users access a service, the majority of options available to them are preset and cannot be altered. A service dialog exposes some of those options to the user so that even if they are ordering a basic RHEL 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed.
+Using a service dialog, you can determine which options the users get to change. When users access a service, the majority of options available to them are preset and cannot be altered. A service dialog exposes some of those options to the user so that even if they are ordering a basic Red Hat Enterprise Linux 7 machine, for example, they can at least choose the amount of memory, virtual CPUs, or other options available to the instance they order. In cases where certain fields must be unique, such as the name of virtual machines in Red Hat Virtualization, users must enter their own unique name for the virtual machine they choose or the operation will fail, so this field must be exposed.
 
 A service dialog contains three components:
 
