Added Lenovo Physical Infra to type attribute list

--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -167,6 +167,7 @@ The *type* attribute specifies the supported provider class names which include:
 | ManageIQ::Providers::Openshift::ContainerManager
 | ManageIQ::Providers::Openstack::CloudManager
 | ManageIQ::Providers::Openstack::InfraManager
+| ManageIQ::Providers::Lenovo::PhysicalInfraManager
 | ManageIQ::Providers::Redhat::InfraManager
 | ManageIQ::Providers::Vmware::CloudManager
 | ManageIQ::Providers::Vmware::InfraManager
