Applied more SME and peer review edits to the 4.5 version.

--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -43,4 +43,6 @@ include::common/initial-login-changepw.adoc[]
 include::common/appe-appliance-console-cli.adoc[]
 
 
-
+[[storage-sku-types]]
+=== Storage SKU Types
+include::topics/appendix.adoc[]
