Removed version-specific details from the instructions on downloading ManageIQ.

--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -16,7 +16,7 @@ The following procedure outlines how to obtain a copy of the appliance from the 
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Red Hat Virtualization* from the *--Choose your platform--* list.
-. Select *Stable (fine-2)* from the *--Choose a release--* list.
+. Select *Stable* from the *--Choose a release--* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
