--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -14,7 +14,7 @@ ifdef::miq[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Microsoft Azure* from the *--Choose your platform--* list.
-. Select *Stable (fine-2)* from the *--Choose a release--* list.
+. Select *Stable* from the *--Choose a release--* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
