WIP: Integrating content on orchestration stacks into the Provisioning Virtual Machines and Hosts guide

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
@@ -20,9 +20,13 @@ include::topics/Fulfilling_Requests.adoc[]
 include::topics/Catalogs_and_Services.adoc[]
 include::topics/Retirement.adoc[]
 
+[appendix]
+[[appendix]]
+== Appendix
 
-
-
+[[example-cloudformation-provisioning-via-services]]
+=== Example: CloudFormation Provisioning via Services
+include::topics/cloudformation_provisioning_via_services.adoc[]
 
 
 
