--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -373,12 +373,97 @@ include::common/create-azure-catalog-item.adoc[]
 include::common/create-container-template-catalog-item.adoc[]
 
 
+[[create-orchestration-catalog-item]]
+===== Creating an Orchestration Catalog Item
+
+include::common/create-orchestration-catalog-item.adoc[]
+
+
 [[provisioning-a-service]]
 ===== Provisioning a Service
 
 include::common/catalog-order.adoc[]
 
 The parameters are passed to the children based on the method tied to the choices made in the dialog.
+
+[[orchestration-stack]]
+=== Orchestration Stacks
+
+[[integration_with_aws_cloudformation_and_openstack_heat]]
+==== Integration with AWS CloudFormation and OpenStack Heat
+
+{product-title} integrates with AWS CloudFormation and OpenStack Heat and provides an ability to:
+
+* Inventory all *AWS CloudFormation* and *OpenStack Heat* stacks and elements into *CFME's VMDB*.
+* Model the relationships of instances to their stacks, inclusive of the user interface. For example, selecting an instance within a region that is within a stack, the user interface shows this on the standard instance view.
+* Model the stack and its elements in the UI.
+
+[NOTE]
+====
+When importing a template into {product-title}, the selected elements are converted according to their type. For example, lists convert to list boxes, and single items convert to text boxes.
+====
+
+[[cloud_orchestration]]
+==== Cloud Orchestration
+
+Cloud Orchestration is a service that allows you to create, update and manage cloud resources and their software components as a single unit and then deploy them in an automated, repeatable way through a template.
+Templates use a human-readable syntax and can be defined in text files (thereby allowing users to check them into version control). Templates allow you to easily deploy and re-configure infrastructure for applications within your cloud. A user can author the stack templates, or can upload them from other sources.
+
+[[adding-a-new-orchestration-template]]
+=== Adding a New Orchestration Template
+
+Use this procedure to add new orchestration templates using the dashboard user interface.
+
+. Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
+. Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Create a new Orchestration Template*. The *Adding a new Orchestration Template* window is displayed.
+image:7148.png[Adding_a_new_Orchestration_Template]
+. In *Name*, enter a name for the new template.
+. In *Description*, enter a description for the template. Select Amazon CloudFormation or OpenStack Heat from the *Template Type* list. The default is Amazon CloudFormation.
+. You can select the *Draft box* to create a draft template.
+. Define your new template following the specification structure of the selected *Template Type*.
+. Click *Add*.
+
+[[editing-orchestration-templates]]
+=== Editing Orchestration Templates
+
+Use this procedure to edit orchestration templates using the dashboard UI.
+[arabic]
+. Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
+. Select the orchestration template you want to edit from the *All Orchestration Templates* list.
+. Click image:1847.png[Configuration] *Configuration*, then click image:1851.png[Edit_Sign] *Edit selected Orchestration Template*. The *Edit selected Orchestration Template* window is displayed.
+. You can only edit the *Name* and *Description* of a read-only template as there can be stacks associated with the selected template. For templates that are not read-only, you can edit all content in the template as required.
+. Click *Save*.
+
+[[copying-orchestration-templates]]
+=== Copying Orchestration Templates
+
+Use this procedure to copy an orchestration template to create a new template.
+[arabic]
+. Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
+. Click image:1847.png[Configuration] *Configuration*, then click image:1859.png[Copy] *Copy selected Orchestration Template*. The *Copy selected Orchestration Template* window is displayed.
+. You can copy the selected template to create a new template, and include the changes as required.
++
+[NOTE]
+====
+In order to create the new template its content must be unique.
+====
++
+. Click *Save*.
+
+[[deleting-orchestration-templates]]
+=== Deleting Orchestration Templates
+
+Use this procedure to delete orchestration templates using the dashboard UI.
+[arabic]
+. Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
+. Select the orchestration template you want to delete from the *All Orchestration Templates* list.
+. Click image:1848.png[Configuration] *Configuration*, then click image:1861.png[Delete] *Remove selected Orchestration Template from Inventory*.
+. A warning window to confirm the permanent removal of the selected item from the VMDB appears.
+. Click *OK*.
+
+This instantly deletes the selected orchestration template. Note that only non read-only templates can be removed.
+
+
 
 
 [[example-service-provisioning]]
